--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 reslog change log
 
-2020-02-06
+2020-02-06	version 3.17
 	 1. Replaced the messy GNU-styled, multi-lingual documents with a
 	    single Markdown README.md.
 	 2. Added the GitHub repository to the document, and removed the
