Added support for the xz compression.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 reslog change log
 
+2022-03-19
+	 1. Added support for the xz compression.
+
 2020-02-06	version 3.17
 	 1. Replaced the messy GNU-styled, multi-lingual documents with a
 	    single Markdown README.md.
