Replaced Compress::Zlib with IO::Compress::Gzip and IO::Uncompress::Gunzip.  Replaced Compress::Bzip2 with IO::Compress::Bzip2 and IO::Uncompress::Bunzip2.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ reslog change log
 
 2022-03-19
 	 1. Added support for the xz compression.
+	 2. Replaced Compress::Zlib with IO::Compress::Gzip and
+	    IO::Uncompress::Gunzip.
+	 3. Replaced Compress::Bzip2 with IO::Compress::Bzip2 and
+	    IO::Uncompress::Bunzip2.
 
 2020-02-06	version 3.17
 	 1. Replaced the messy GNU-styled, multi-lingual documents with a
